# home-automation

./: .gitignore  Cargo.toml  README.md  Vagrantfile
app/: settings.gradle
app/app/: build.gradle
app/app/src/androidTest/java/dev/omikron/homeautomation/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/dev/omikron/homeautomation/: MainActivity.kt
app/app/src/test/java/dev/omikron/homeautomation/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
brain/: Cargo.toml
brain/migrations/: 0001_initial.toml
brain/src/: config.rs  main.rs  server.rs  swagger.rs
brain/src/chan/: mod.rs  mqtt.rs
brain/src/handler/: auth.rs  devices.rs  mod.rs  test.rs  users.rs
brain/src/middleware/: mod.rs
brain/src/models/: account.rs  devices.rs  mod.rs
frontend/: .gitignore  package.json
frontend/src/: index.css  main.tsx  routes.tsx
frontend/src/api/: api.ts  auth.ts  error.ts
frontend/src/components/: loading.tsx
frontend/src/context/: user.tsx
frontend/src/utils/: option.ts
frontend/src/views/: login.tsx
light-controller/: .gitignore  Cargo.toml  build.rs  cfg.example.toml
light-controller/src/: config.rs  main.rs  wifi.rs
vagrant/: brain.yml  vars.example.yml
vagrant/brain/: brain.nginx.jinja2  brain.service  ca.crt  ca.key  ca.srl  config.toml.jinja2  fullchain.crt  listeners.conf  pwfile  server.cnf  server.crt  server.csr  server.key
