[package]
name = "light-controller"
version = "0.1.0"
authors = ["myOmikron <git@omikron.dev>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "~0.32", features = ["binstart"] }
esp-idf-hal = { version = "~0.40" }
esp-idf-svc = { version = "~0.45", features = ["experimental", "alloc"] }
embedded-svc = { version = "~0.24" }

# Toml configuration
toml-cfg = { version = "~0.1" }

# Easier error handling
anyhow = { version = "~1" }

# Logging facade
log = { version = "~0.4" }

[build-dependencies]
embuild = { version = "~0.31" }
anyhow = { version = "~1" }
toml-cfg = { version = "~0.1" }
